# gods-eye

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml
crates/ge-backend-trait/: Cargo.toml
crates/ge-backend-trait/src/: lib.rs
crates/ge-camera/: Cargo.toml
crates/ge-camera/src/: lib.rs
crates/ge-cli/: Cargo.toml
crates/ge-cli/src/: main.rs
crates/ge-core/: Cargo.toml
crates/ge-core/src/: lib.rs
crates/ge-depth/: Cargo.toml
crates/ge-depth/src/: lib.rs
crates/ge-fusion/: Cargo.toml
crates/ge-fusion/src/: lib.rs
crates/ge-fusion/src/shaders/: tsdf_integrate.wgsl
crates/ge-mesh/: Cargo.toml
crates/ge-mesh/src/: lib.rs
crates/ge-prim/: Cargo.toml
crates/ge-prim/src/: detect.rs  eigen.rs  lib.rs  moments.rs  polygon.rs  registry.rs
crates/ge-py/: Cargo.toml
crates/ge-py/src/: lib.rs
crates/ge-slam/: Cargo.toml
crates/ge-slam/src/: lib.rs  sim.rs
crates/ge-slam/tests/: pipeline.rs
crates/ge-viewer/: Cargo.toml
crates/ge-viewer/examples/: camera.rs  image_to_planes.rs  panorama.rs  planes.rs  reconstruct.rs  view.rs
crates/ge-viewer/src/: lib.rs
docs/design/: ARCHITECTURE.md  BENCHMARKS.md  PROPOSALS.md  RESEARCH.md  ROADMAP.md
tools/: export_fixed_onnx.py  export_metric_onnx.py
