[package]
name = "ge-core"
description = "Pipeline orchestration: thread-per-stage, bounded channels, object pools."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ge-backend-trait.workspace = true
ge-fusion.workspace = true
ge-mesh.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
