[package]
name = "ge-fusion"
description = "Sparse voxel-hashed TSDF fusion. wgpu/WGSL compute kernels land incrementally."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
glam.workspace = true
anyhow.workspace = true
