[package]
name = "ge-mesh"
description = "Mesh extraction: dirty-block marching cubes + CPU surface-nets floor; adaptive LOD."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
# Portable CPU isosurface mesher — the guaranteed floor below the GPU path.
fast-surface-nets = "0.2"
