[package]
name = "ge-prim"
description = "Low-poly primitive reconstruction: robust plane fitting, detection, polygonization."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
glam.workspace = true
anyhow.workspace = true
