[package]
name = "ge-slam"
description = "Depth-assisted direct visual odometry + pose-graph. Identity stub now; real VO in M1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ge-backend-trait.workspace = true
glam.workspace = true
anyhow.workspace = true
