[package]
name = "ge-slam"
description = "Depth-assisted direct visual odometry + pose-graph. Identity stub now; real VO in M1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ge-backend-trait.workspace = true
glam.workspace = true
anyhow.workspace = true

[dev-dependencies]
# Integration test only: compose the tracker with the plane registry to prove
# world planes stay put as the camera moves (the L2 "walk around" promise).
ge-prim.workspace = true
