[package]
name = "ge-viewer"
description = "Live mesh + camera viewers. Headless sinks always; GPU windows behind features."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Opens an interactive GPU window (three-d, wgpu-backed). Off by default so the
# core build and CI stay headless and dependency-light.
window = ["dep:three-d", "dep:bytemuck"]
# Webcam capture source (nokhwa). Off by default; pulls native camera bindings.
camera = ["dep:nokhwa"]
# Live 3D reconstruction example: camera -> metric depth -> visual odometry ->
# persistent TSDF -> mesh.
reconstruct = [
    "window",
    "camera",
    "dep:ge-depth",
    "ge-depth/onnx",
    "dep:ge-fusion",
    "dep:ge-slam",
]

[dependencies]
ge-backend-trait.workspace = true
ge-mesh.workspace = true
ge-depth = { workspace = true, optional = true }
ge-fusion = { workspace = true, optional = true }
ge-slam = { workspace = true, optional = true }
anyhow.workspace = true
three-d = { version = "0.19", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
bytemuck = { version = "1", optional = true }

[[example]]
name = "view"
required-features = ["window"]

[[example]]
name = "camera"
required-features = ["window", "camera"]

[[example]]
name = "reconstruct"
required-features = ["reconstruct"]
