[package]
name = "ge-viewer"
description = "Live mesh + camera viewers. Headless sinks always; GPU windows behind features."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Opens an interactive GPU window (three-d, wgpu-backed). Off by default so the
# core build and CI stay headless and dependency-light.
window = ["dep:three-d", "dep:bytemuck"]
# Webcam capture source (nokhwa). Off by default; pulls native camera bindings.
camera = ["dep:nokhwa"]
# Live 3D reconstruction example: camera -> metric depth -> visual odometry ->
# persistent TSDF -> mesh.
reconstruct = [
    "window",
    "camera",
    "dep:ge-depth",
    "ge-depth/onnx",
    "dep:ge-fusion",
    "dep:ge-slam",
]
# 2D panorama: track camera rotation and stitch frames onto a canvas. Isolates
# the motion-tracking problem from depth/3D.
panorama = ["window", "camera", "dep:ge-slam"]
# Low-poly plane reconstruction: depth -> plane detection -> world registry ->
# oriented-rectangle mesh, posed by 2D-tracking-derived camera rotation.
planes = [
    "window",
    "camera",
    "dep:ge-depth",
    "ge-depth/onnx",
    "dep:ge-prim",
    "dep:ge-slam",
]
# Offline single-image -> low-poly planes diagnostic (headless: writes PLYs).
# Our reproducible "basis" for iterating on depth -> plane quality.
image-recon = ["dep:ge-depth", "ge-depth/onnx", "dep:ge-prim", "dep:image"]

[dependencies]
ge-backend-trait.workspace = true
ge-mesh.workspace = true
ge-depth = { workspace = true, optional = true }
ge-fusion = { workspace = true, optional = true }
ge-slam = { workspace = true, optional = true }
ge-prim = { workspace = true, optional = true }
glam.workspace = true
anyhow.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
three-d = { version = "0.19", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
bytemuck = { version = "1", optional = true }

[[example]]
name = "view"
required-features = ["window"]

[[example]]
name = "camera"
required-features = ["window", "camera"]

[[example]]
name = "reconstruct"
required-features = ["reconstruct"]

[[example]]
name = "panorama"
required-features = ["panorama"]

[[example]]
name = "planes"
required-features = ["planes"]

[[example]]
name = "image_to_planes"
required-features = ["image-recon"]
